fix; other profile name (title) was right-aligned

--- a/src/App.css
+++ b/src/App.css
@@ -107,6 +107,7 @@ button {
 
 .main-page .header .text {
   margin-left: 12px;
+  margin-right: auto;
 }
 
 /* parent items of above elements, setting consistent gap between */
